--- a/ui.html
+++ b/ui.html
@@ -1056,6 +1056,7 @@
           <div id="backendStatus" class="backend-status" title="Checking..."></div>
         </div>
         <div style="display:flex;gap:6px;align-items:center">
+          <a href="ui-audio.html" style="color:var(--text-dim);text-decoration:none;font-size:0.85rem;margin-right:8px" title="Text to Speech">🔊 TTS</a>
           <span class="help-icon" onclick="showVariablesHelp()" title="Variables Help">?</span>
           <span class="settings-icon" onclick="openSettings()" title="Settings">&#9881;</span>
         </div>
