feat: Add periodic backend status check every 10 seconds

--- a/ui-audio.html
+++ b/ui-audio.html
@@ -839,6 +839,9 @@
       setupEventListeners();
       loadHistory();
       loadSettings();
+
+      // Check backend status every 10 seconds
+      setInterval(checkBackendStatus, 10000);
     });
 
     // Settings persistence
