--- a/ui.html
+++ b/ui.html
@@ -1055,8 +1055,10 @@
           <h1>Silly Media</h1>
           <div id="backendStatus" class="backend-status" title="Checking..."></div>
         </div>
-        <div style="display:flex;gap:6px;align-items:center">
-          <a href="ui-audio.html" style="color:var(--text-dim);text-decoration:none;font-size:0.85rem;margin-right:8px" title="Text to Speech">🔊 TTS</a>
+        <div style="display:flex;gap:12px;align-items:center">
+          <a href="ui-audio.html" style="color:var(--text-dim);text-decoration:none;font-size:0.85rem" title="Text to Speech">🔊 Audio</a>
+          <a href="ui-video.html" style="color:var(--text-dim);text-decoration:none;font-size:0.85rem" title="Video Generation">🎬 Video</a>
+          <a href="http://localhost:4201/docs" target="_blank" style="color:var(--text-dim);text-decoration:none;font-size:0.85rem">API Docs</a>
           <span class="help-icon" onclick="showVariablesHelp()" title="Variables Help">?</span>
           <span class="settings-icon" onclick="openSettings()" title="Settings">&#9881;</span>
         </div>
